@@ -1,5 +1,6 @@
 Version 2.03.14 - 
 ==================================
+  Device scanning is skipping different filesystems.
   Print info message with too many or too large archived files.
   Reduce metadata readings during scanning phase.
   Optimize computation of crc32 check sum with multiple PVs.
